Update from March 23, 2021

--- a/64862-h/64862-h.htm
+++ b/64862-h/64862-h.htm
@@ -7685,7 +7685,7 @@ et les mains de Rudel retombent en les entraînant sur lui.)</p>
 <div class="verse">Qui porta le poète.</div>
 </div>
 
-<p class="c s">TROBALDO, montrant Bernard.</p>
+<p class="c s">TROBALDO, montrant Bertrand.</p>
 
 <div class="poetry">
 <div class="verse i6">Et nous suivrons ce chef!</div>
